# arbitrage-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  network_name_mapping.json  package.json  pnpm-lock.yaml  symbol_mappings.json
_bmad-output/analysis/: brainstorming-session-2026-01-18.md
_bmad-output/excalidraw-diagrams/: dataflow-2026-01-11.excalidraw
_bmad-output/implementation-artifacts/: 1-1-subscriptionchange-data-structure.md  1-2-subscriptionmanager-struct.md  1-3-wsclient-subscription-channel.md  1-4-server-channel-wiring.md  2-1-binance-subscription-builder.md  5-1-new-market-price-data-verification.md  5-2-opportunitydetector-new-market-integration.md  sprint-status.yaml  wts-1-1-project-structure-zustand-setup.md  wts-1-2-tauri-multiwindow-wts-open.md  wts-1-3-six-panel-grid-layout.md  wts-1-4-exchange-tab-selection.md  wts-1-5-connection-status-api-failure.md  wts-1-6-console-panel-basic-structure.md  wts-2-1-upbit-api-auth-balance-backend.md  wts-2-2-balance-panel-ui-state.md  wts-2-3-balance-manual-auto-refresh.md  wts-2-4-market-selection.md  wts-2-5-realtime-orderbook-websocket.md  wts-2-6-orderbook-panel-ui-click-interaction.md  wts-3-1-order-api-rust-backend.md  wts-3-2-order-panel-ui-qty-price-input.md  wts-3-3-market-order-buy-sell.md  wts-3-4-limit-order-buy-sell.md  wts-3-5-order-confirm-dialog.md  wts-3-6-console-log-order-result.md  wts-3-7-order-error-ratelimit-handling.md  wts-4-1-deposit-api-rust-backend.md  wts-4-2-deposit-tab-ui-asset-network.md  wts-4-3-deposit-address-display-copy.md  wts-4-4-deposit-address-async-generation.md  wts-5-1-withdraw-api-rust-backend.md  wts-5-2-withdraw-tab-ui-form.md  wts-5-3-withdraw-confirm-dialog.md  wts-5-4-withdraw-execute-result.md  wts-5-5-2fa-withdraw-limit-guide.md  wts-5-6-withdraw-error-network-handling.md  wts-epic-1-retro-2026-01-19.md
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2026-01-11.md  prd.md  ux-design-specification.md  wts-epics.md
_bmad-output/planning-artifacts/archive/2026-01-11/: DATA_MODEL.md  api-contracts.md  component-inventory.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
_bmad-output/planning-artifacts/archive/2026-01-18/: architecture.md  prd.md
_bmad-output/planning-artifacts/research/: technical-dynamic-market-subscription-research-2026-01-11.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  codex.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/desktop/_bmad/_config/: files-manifest.csv  manifest.yaml
apps/desktop/_bmad/_config/ides/: claude-code.yaml  codex.yaml
apps/desktop/_bmad/bmm/: config.yaml
apps/desktop/_bmad/core/: config.yaml
apps/desktop/src/: App.tsx  index.css  main.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  credentials.rs  exchange_client.rs  main.rs  state.rs  symbol_mapping.rs
apps/desktop/src-tauri/src/wts/: mod.rs  types.rs
apps/desktop/src-tauri/src/wts/upbit/: auth.rs  client.rs  mod.rs  myorder_ws.rs  types.rs
apps/desktop/src/components/: Dashboard.tsx  Header.tsx  Markets.tsx  Opportunities.tsx  Settings.tsx  Wallets.tsx
apps/desktop/src/components/__tests__/: Header.test.tsx
apps/desktop/src/components/ui/: badge.tsx
apps/desktop/src/hooks/: useTauri.ts
apps/desktop/src/utils/: exchangeUrls.ts
apps/desktop/src/wts/: WtsWindow.tsx  index.tsx  types.ts
apps/desktop/src/wts/__tests__/: WithdrawConfirmDialog.test.tsx  WtsWindow.test.tsx  WtsWindow.withdraw.test.tsx  index.test.tsx  types.test.ts
apps/desktop/src/wts/components/: ConfirmDialog.tsx  ConsoleLogItem.tsx  MarketSelector.tsx  ToastContainer.tsx  WithdrawConfirmDialog.tsx  WithdrawResultDialog.tsx
apps/desktop/src/wts/hooks/: index.ts  useConnectionCheck.ts  useUpbitMarkets.ts  useUpbitMyOrderWs.ts  useUpbitOrderbookWs.ts
apps/desktop/src/wts/panels/: BalancePanel.tsx  ConsolePanel.tsx  ExchangePanel.tsx  OpenOrdersPanel.tsx  OrderPanel.tsx  OrderbookPanel.tsx  TransferPanel.tsx  index.ts
apps/desktop/src/wts/stores/: balanceStore.ts  consoleStore.ts  index.ts  openOrdersStore.ts  orderStore.ts  orderbookStore.ts  toastStore.ts  transferStore.ts  wtsStore.ts
apps/server/: Cargo.toml
apps/server/src/: config.rs  exchange_rate.rs  main.rs  state.rs  status_notifier.rs  wallet_status.rs  ws_server.rs
apps/server/src/feeds/: common.rs  connection.rs  handler.rs  mod.rs
apps/server/src/feeds/korean/: bithumb.rs  mod.rs  upbit.rs
apps/server/src/feeds/overseas/: binance.rs  bybit.rs  coinbase.rs  gateio.rs  mod.rs
crates/alerts/: Cargo.toml
crates/alerts/src/: config.rs  db.rs  lib.rs  notifier.rs  telegram.rs
crates/core/: Cargo.toml
crates/core/src/: asset.rs  bridge.rs  chain.rs  exchange.rs  execution.rs  lib.rs  opportunity.rs  price.rs  quote_currency.rs
crates/engine/: Cargo.toml
crates/engine/src/: depth.rs  detector.rs  fee.rs  lib.rs  orderbook.rs  premium.rs  route.rs
crates/executor/: Cargo.toml
crates/executor/src/: cex.rs  dex.rs  error.rs  lib.rs  order.rs
crates/feeds/: Cargo.toml
crates/feeds/src/: adapter.rs  aggregator.rs  connection_pool.rs  discovery.rs  error.rs  feed.rs  lib.rs  manager.rs  message.rs  rest.rs  subscription.rs  symbol_mapping.rs  websocket.rs
crates/feeds/src/adapter/: binance.rs  bithumb.rs  bybit.rs  coinbase.rs  gateio.rs  mod.rs  upbit.rs
crates/feeds/src/runner/: binance.rs  bithumb.rs  bybit.rs  coinbase.rs  gateio.rs  mod.rs  upbit.rs
crates/serialization/: Cargo.toml
crates/serialization/schemas/: opportunity.fbs  price.fbs
crates/serialization/src/: lib.rs  opportunity.rs  price.rs
docs/: ARCHITECTURE.md  DATA_MODEL.md  api-contracts.md  development-guide.md  index.md  project-overview.md  source-tree-analysis.md
(+27 files in other folders)
