[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/feeds",
    "crates/engine",
    "crates/executor",
    "crates/alerts",
    "apps/server",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/arbitrage-bot"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Performance
compact_str = { version = "0.8", features = ["serde"] }
dashmap = "6"
crossbeam = "0.8"

# Utilities
thiserror = "2"
tracing = "0.1"

# Testing
pretty_assertions = "1"
