[package]
name = "arbitrage-alerts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
arbitrage-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
