[package]
name = "arbitrage-engine"
version.workspace = true
edition.workspace = true

[dependencies]
arbitrage-core = { path = "../core" }
arbitrage-feeds = { path = "../feeds" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }

# Concurrency
dashmap = { workspace = true }
crossbeam = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = "0.3"
