[package]
name = "arbitrage-feeds"
version.workspace = true
edition.workspace = true

[dependencies]
arbitrage-core = { path = "../core" }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1"

# Concurrency
dashmap = { workspace = true }
crossbeam = { workspace = true }

# HTTP client for REST APIs
reqwest = { version = "0.12", features = ["json"] }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
pretty_assertions = { workspace = true }
