[package]
name = "arbitrage-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# No longer need core crates - all data comes from CLI server via WebSocket

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency
dashmap = "6"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
dotenvy = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
