[package]
name = "arbitrage-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# No longer need core crates - all data comes from CLI server via WebSocket

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
native-tls = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency
dashmap = "6"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Crypto for API signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
rand = "0.8"

# JWT for Upbit API authentication
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
dotenvy = "0.15"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
